# platform.external.lz4

./: BUILD.bazel  OWNERS  meson.build
.github/workflows/: ci.yml  scorecard.yml
lib/: Android.bp  lz4frame.c  lz4hc.c  meson.build
programs/: Android.bp
tests/: frametest.c  fuzzer.c
